fix some bugs and adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 								</li>
 							</ul>
 						</div>
-						<form action="#!" class="content__form form">
+						<form action="#!" class="content__form form hide">
 							<div class="form__free">
 								<span class='form__free-text'>Бесплатно</span>
 							</div>
