some changes and fix

--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
 				</h1>
 				<div class="footer__block">
 					<div class="footer__block-images">
-						<img src="../src/img/footer/footer-image.png" alt="footer-image" class="footer__img">
+						<img src="./img/footer/footer-image.png" alt="footer-image" class="footer__img">
 					</div>
 					<div class="footer__block-content">
 						<div class="content__item">
