--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,11 @@
 		<main class='main'>
 			<section class="main__about">
 				<div class="main__wrapper">
-					<img class="brand-icon" src="./img/header/double-icon.png" alt="brand icon" />
+
+					<div class="brand-icon ">
+						<img class="brand-icon_big" src="./img/header/single-icon.png" alt="brand icon" />
+						<img class="brand-icon_small" src="./img/header/single-small-icon.png" alt="brand icon" />
+					</div>
 					<h1 class="main__about-title main__about-title-lg">
 						Грибок – это опасная инфекция
 					</h1>
@@ -201,7 +205,10 @@
 				<img class="main__info1-img-top" src="./img/main/main-wave-top-icon.png" alt="img-wave" />
 				<div class="main__wrapper">
 
-					<img class="brand-icon" src="./img/header/double-icon.png" alt="brand icon" />
+					<div class="brand-icon ">
+						<img class="brand-icon_big" src="./img/header/single-icon.png" alt="brand icon" />
+						<img class="brand-icon_small" src="./img/header/single-small-icon.png" alt="brand icon" />
+					</div>
 					<h1 class="main__about-title main__about-title-lg">
 						Почему большинство средств против грибка
 						малоэффективны
@@ -340,7 +347,10 @@
 		<footer class='footer'>
 			<img class="footer__img-wave-bottom" src="./img/main/main-wave-top-icon.png" alt="img-wave">
 			<div class="main__wrapper">
-				<img class="brand-icon" src="./img/header/double-icon.png" alt="brand icon" />
+				<div class="brand-icon ">
+					<img class="brand-icon_big" src="./img/header/single-icon.png" alt="brand icon" />
+					<img class="brand-icon_small" src="./img/header/single-small-icon.png" alt="brand icon" />
+				</div>
 				<h1 class="footer-title-lg">Как применять <span class="colored">Микоцин</span>
 				</h1>
 				<div class="footer__block">
