add basic hover reaction

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,11 @@
 						<img class='info-img' src="./img/header/header-main-img.png" alt="header main image">
 					</div>
 					<div class="header__brand">
-						<img class="header__brand-icon" src="./img/header/double-icon.png" alt="brand icon" />
+						<!-- <img class="header__brand-icon" src="./img/header/double-icon.png" alt="brand icon" /> -->
+						<div class="brand-icon ">
+							<img class="brand-icon_big" src="./img/header/single-icon.png" alt="brand icon" />
+							<img class="brand-icon_small" src="./img/header/single-small-icon.png" alt="brand icon" />
+						</div>
 						<span class="header__brand-name">Микоцин</span>
 					</div>
 					<ul class="header__list">
