--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-	<!-- Header start -->
+	<div class="shadow">
+		<!-- Header start -->
 	<div class="wrapper wrapper-bg">
-
 		<div class="header__wrapper">
 			<header id="bg-img" class="header">
 				<div class="header__info">
@@ -383,6 +383,7 @@
 				</div>
 			</div>
 		</footer>
+	</div>
 	</div>
 
 </body>
