--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 </head>
 
 <body>
-	<!-- Header start -->
+	<div class="shadow">
+		<!-- Header start -->
 	<div class="wrapper wrapper-bg">
-
 		<div class="header__wrapper">
 			<header id="bg-img" class="header">
 				<div class="header__info">
 					<div class="header__info-img">
 						<img class='info-img' src="./img/header/header-main-img.png" alt="header main image">
 					</div>
-					<div class="header__brand">
-						<img class="header__brand-icon" src="./img/header/double-icon.png" alt="brand icon" />
+					<div class="header__brand">					
+						<div class="brand-icon ">
+							<img class="brand-icon_big" src="./img/header/single-icon.png" alt="brand icon" />
+							<img class="brand-icon_small" src="./img/header/single-small-icon.png" alt="brand icon" />
+						</div>
 						<span class="header__brand-name">Микоцин</span>
 					</div>
 					<ul class="header__list">
@@ -380,6 +383,7 @@
 				</div>
 			</div>
 		</footer>
+	</div>
 	</div>
 
 </body>
