--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="shortcut icon" href="../src/img/header/Vector_Smart_Object_copy.png" title="page Icon" />
+	<link rel="shortcut icon" href="./img/header/single-icon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/main.css" />
 	<script src="./js/main.js" defer></script>
 	<title>Landing page</title>
@@ -31,15 +31,15 @@
 					<ul class="header__list">
 						<li class="header__item">
 							<img class="header__item-icon" src="./img/header/first-icon.png" alt="number one" />
-							<span>№1 Для избавления</br> от любого типа грибка</span>
+							<span>№1 Для избавления<br> от любого типа грибка</span>
 						</li>
 						<li class="header__item">
-							<img class="header__item-icon" src="./img/header/man-icon.png" alt="number one" /><span>Рекомендован</br>
+							<img class="header__item-icon" src="./img/header/man-icon.png" alt="number one" /><span>Рекомендован<br>
 								дерматологами</span>
 						</li>
 						<li class="header__item">
 							<img class="header__item-icon" src="./img/header/people-icon.png" alt="number one" />
-							<span>13000+ довольных</br> клиентов за 2018 год</span>
+							<span>13000+ довольных<br> клиентов за 2018 год</span>
 						</li>
 					</ul>
 				</div>
@@ -90,7 +90,7 @@
 						</div>
 						<h1 class="form__title">
 							Успейте заказать
-							со скидкой</br>
+							со скидкой<br>
 							<span>до 10.09.2018</span>
 						</h1>
 						<div class="form__price">
@@ -125,14 +125,14 @@
 							</div>
 						</div>
 						<p class="form__discount">
-							Осталось <span>10</span> упаковок</br>
+							Осталось <span>10</span> упаковок<br>
 							со скидкой
 						</p>
 						<div class="form__footer">
 							<p class="form__footer-info">Ваши данные защищены!</p>
 						</div>
 					</form>
-
+				</div>
 			</header>
 		</div>
 
@@ -239,7 +239,7 @@
 						<div class="block__item item-cream">
 							<div class="item__about">
 								<h4 class="item__about-title">Наружные средства</h4>
-								<span class="item__about-text">Способны устранить внешние проявления грибка.</br><span
+								<span class="item__about-text">Способны устранить внешние проявления грибка.<br><span
 										class='item__about-text-cursive'>(кремы, лаки, пластыри)</span></span>
 							</div>
 							<h1 class="item__about-but-orange">
@@ -259,7 +259,8 @@
 							<div class="item__about">
 								<h4 class="item__about-title">Внутренние средства</h4>
 								<span class="item__about-text">Убивают грибковую инфекцию
-									в организме.</br><span class='item__about-text-cursive'>(таблетки, саше, капли)</span></span>
+									в организме.<br><span class='item__about-text-cursive'>(таблетки, саше, капли)</span>
+								</span>
 							</div>
 							<h1 class="item__about-but-orange">
 								Но
@@ -299,7 +300,7 @@
 				<div class="main__wrapper">
 					<img class="brand-icon-single" src="./img/main/single-icon.png" alt="img-single" />
 
-					<h1 class="main__why main__why-title-lg">Почему таблетки <span class="colored">Микоцин</span> от грибка</br>
+					<h1 class="main__why main__why-title-lg">Почему таблетки <span class="colored">Микоцин</span> от грибка<br>
 						так эффективны?
 					</h1>
 					<h4 class="main__why main__why-title-sm">
