--- a/src/index.html
+++ b/src/index.html
@@ -248,11 +248,15 @@
 							<p class="item__about-info">
 								Очаг заражения находится
 								под ногтевой пластиной, а наружные средства не способны его достичь - они действуют только на на
-								верхнем слое ногтя, поэтому <span class="item__about-info-bold">не способны избавить от грибка</span>.
-								Для повышения их эффективности рекомендуется <span class="item__about-info-bold"></span>спиливать
+								верхнем слое ногтя, поэтому 
+								<span class="item__about-info-bold">не способны избавить от грибка</span>.
+								Для повышения их эффективности рекомендуется <span class="item__about-info-bold">спиливать
 								ноготь полностью,</span>
 								но это больно, некрасиво
-								и совершенно <span class="item__about-info-bold">не дает гарантий выздоровления.</span>
+								и совершенно 
+								<span class="item__about-info-bold">
+									не дает гарантий выздоровления.
+								</span>
 							</p>
 						</div>
 						<div class="block__item item-medicine">
@@ -317,21 +321,19 @@
 							</p>
 						</div>
 						<div class="block__item item-second">
-							<h4 class="block__item-title">Кремы и мази</h4>
+							<h4 class="block__item-title">Народные методы</h4>
 							<p class="block__item-info">
-								<span class="block__item-info-bold">Не лечат грибок, потому
-									что не проникают в ногтевую пластину</span>. Только временно избавляют от симптомов инфекций. Могут
-								вызвать сильную аллергию
-								и раздражения на коже.
+									Помогают только в редких случаях. <span class="block__item-info-bold">Могут причинить вред коже 
+									и ногтям.</span> Не предотвращают повторные заражения грибком.
 							</p>
 						</div>
 						<div class="block__item item-third">
-							<h4 class="block__item-title">Кремы и мази</h4>
+							<h4 class="block__item-title">Таблетки</h4>
 							<p class="block__item-info">
-								<span class="block__item-info-bold">Не лечат грибок, потому
-									что не проникают в ногтевую пластину</span>. Только временно избавляют от симптомов инфекций. Могут
-								вызвать сильную аллергию
-								и раздражения на коже.
+									<span class="block__item-info-bold">Действуют против всех видов грибков.</span> Быстро снимают неприятные 
+									симптомы и уничтожают инфекцию изнутри вне зависимости от области 
+									заражения грибком. Надолго 
+									защищают от повторных заражений.
 							</p>
 						</div>
 					</div>
