--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="./img/header/single-icon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 	<link rel="stylesheet" href="./css/main.css" />
-	<script src="./js/main/main.js" defer></script>
+	<script src="./js/main.js" defer></script>
 	<title>Landing page</title>
 </head>
 
